--- a/src/app/manuscript/manuscript-list/manuscript-list.component.css
+++ b/src/app/manuscript/manuscript-list/manuscript-list.component.css
@@ -43,20 +43,17 @@
     padding: 0;
 }
 #page-content-wrapper {
-    padding-left: 0;
-    margin-left: 0;
+    padding: 0;
+    margin: 0;
     width: 100%;
     height: 100%;
+    min-height: 100%;
 }
 #wrapper.active {
     padding-left: 200px;
 }
 #wrapper.active #sidebar-wrapper {
     left: 200px;
-}
-
-#page-content-wrapper {
-  width: 100%;
 }
 
 #sidebar_menu li a, .sidebar-nav li a {
